2002-12-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed all compiler warnings.
    

2002-12-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Re-implemented UI from button based to real-tab based 
      using NSTabView based on user feedback. Major code 
      changes and simplifications.
      
    * Fixed bug causing a crash when a session was closed 
      without the shell exiting with the "autoclose" 
      preference off.
      
    * Disabled the limit on the window size. Not sure why
      that was there.
      

2002-12-19	fabian
    * Changed version number to 0.6.0
    * Fixed a bug in zh_TW nib file
    * Alt/Option key now can be used as Meta or to add ESC
    * Fixed the "not saving auto-close option" bug
    * Fixed enter key on numeric keyboard problem
    * Fixed a problem that causes transparency settings lost
    * Fixed a lot of bugs related to VT100 emulation.
    
2002-12-18	fabian
    * change the shortcut key to close terminal to command-w
      and close window to shift-command-w, a la mozilla
      
2002-12-18	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Page up/down scrolling keys now need Shift key down 
      a la xterm since some programs like vi need to 
      interpret page up/down keys on their own.
      

2002-12-17	fabian
    * Added an AutoClose option in preference
    * Re-arranged preference panel
    * Re-arranged the toolbar items
    * Got rid of the quick-run panel
    * Del key now sends the correct escape sequence instead of 
      0x7f
    * Set default term type to xterm, which is consitent with
      the rest of the code
    * Version number is now 0.5.7
    * Fixed a bug related to setting default shell
    
2002-12-17	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Using user's default shell in setting initial preferences.
    
    * Added drag-n-drop support for the text view. Text and file 
      names get pasted into the shell when dragged and dropped 
      onto the text view.
      